--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           node-version: 16
       - run: npm install
+      - run: npm update
       - run: npm run build
       - run: |
           echo @lexacode:https://npm.pkg.github.com/ > build/.npmrc
